// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabled text input 1`] = `
<div>
  <input
    aria-invalid="false"
    aria-label="disabled text input"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-3"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    disabled=""
    type="text"
    value=""
  />
</div>
`;

exports[`invalid text input 1`] = `
<div>
  <input
    aria-invalid="true"
    aria-label="invalid text input"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-5"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    type="text"
    value="test input"
  />
</div>
`;

exports[`readonly text input 1`] = `
<div>
  <input
    aria-invalid="false"
    aria-label="readonly text input"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-4"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    readonly=""
    type="text"
    value="read only"
  />
</div>
`;

exports[`simple text input 1`] = `
<div>
  <input
    aria-invalid="false"
    aria-label="simple text input"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-2"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    type="text"
    value="test input"
  />
</div>
`;

exports[`validated text input 1`] = `
<div>
  <input
    aria-invalid="true"
    aria-label="validated text input"
    class="pf-c-form-control"
    data-ouia-component-id="OUIA-Generated-TextInputBase-8"
    data-ouia-component-type="PF4/TextInput"
    data-ouia-safe="true"
    type="text"
    value="test input"
  />
</div>
`;

exports[`validated text input success 1`] = `
<TextInput
  aria-label="validated text input"
  onChange={[MockFunction]}
  required={true}
  validated="success"
  value="test input"
>
  <TextInputBase
    aria-label="validated text input"
    className=""
    innerRef={null}
    isDisabled={false}
    isIconSprite={false}
    isLeftTruncated={false}
    isReadOnly={false}
    isRequired={false}
    onChange={[MockFunction]}
    ouiaSafe={true}
    required={true}
    type="text"
    validated="success"
    value="test input"
  >
    <input
      aria-invalid={false}
      aria-label="validated text input"
      className="pf-c-form-control pf-m-success"
      data-ouia-component-id="OUIA-Generated-TextInputBase-6"
      data-ouia-component-type="PF4/TextInput"
      data-ouia-safe={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value="test input"
    />
  </TextInputBase>
</TextInput>
`;

exports[`validated text input success 2`] = `
<TextInput
  aria-label="validated text input"
  onChange={[MockFunction]}
  required={true}
  validated="warning"
  value="test input"
>
  <TextInputBase
    aria-label="validated text input"
    className=""
    innerRef={null}
    isDisabled={false}
    isIconSprite={false}
    isLeftTruncated={false}
    isReadOnly={false}
    isRequired={false}
    onChange={[MockFunction]}
    ouiaSafe={true}
    required={true}
    type="text"
    validated="warning"
    value="test input"
  >
    <input
      aria-invalid={false}
      aria-label="validated text input"
      className="pf-c-form-control pf-m-warning"
      data-ouia-component-id="OUIA-Generated-TextInputBase-7"
      data-ouia-component-type="PF4/TextInput"
      data-ouia-safe={true}
      disabled={false}
      onBlur={[Function]}
      onChange={[Function]}
      onFocus={[Function]}
      readOnly={false}
      required={false}
      type="text"
      value="test input"
    />
  </TextInputBase>
</TextInput>
`;
